Create UDP Server

--- a/UDPServer/UDPServer/UDPServer.vcxproj.filters
+++ b/UDPServer/UDPServer/UDPServer.vcxproj.filters
@@ -18,8 +18,16 @@
     <ClCompile Include="UDPServer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ServerManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ServerManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
